[package]
name = "bulk"
version = "0.4.10"
authors = ["Paul Colomiets"]
license = "MIT"
repository = "http://github.com/tailhook/bulk"
description = """
    A simple tool for making deb packages, repositories,
    and update version numbers.
"""

[dependencies]
tar = "0.4.14"
scan_dir = "0.3.2"
quire = "0.3.1"
argparse = "0.2"
serde = "1.0.0"
serde_derive = "1.0.27"
libflate = "0.1.13"
regex = "0.2.5"
lazy_static = "1.0.0"
unicase = "2.1.0"
log = "0.4.1"
env_logger = "0.5.5"
sha2 = "0.7.0"
time = "0.1.39"
matches = "0.1.2"
quick-error = "1.1.0"
git2 = { version="0.7.0", default-features=false }
tempfile = "2.2.0"

[[bin]]
name = "bulk"
path = "src/main.rs"

[profile.release]
debug = true
lto = true
