[package]
name = "bulk"
version = "0.4.11"
authors = ["Paul Colomiets"]
license = "MIT"
repository = "http://github.com/tailhook/bulk"
description = """
    A simple tool for making deb packages, repositories,
    and update version numbers.
"""

[dependencies]
tar = "0.4.14"
scan_dir = "0.3.2"
quire = "0.4.0"
argparse = "0.2"
serde = "1.0.0"
serde_derive = "1.0.27"
libflate = "0.1.13"
regex = "1.0.0"
lazy_static = "1.0.0"
unicase = "2.1.0"
log = "0.4.1"
env_logger = "0.5.5"
sha2 = "0.7.0"
time = "0.1.39"
matches = "0.1.2"
quick-error = "1.1.0"
git2 = { version="0.7.0", default-features=false }
tempfile = "3.0.2"
failure = "0.1.1"
capturing-glob = "0.1.1"
trimmer = "0.3.6"
trimmer_derive = "0.1.0"
ciruela = "0.6.6"
serde_regex = "0.3.0"
serde_json = "1.0.24"
nice-fs = { path = "nice-fs" }  # temporarily

[[bin]]
name = "bulk"
path = "src/main.rs"

[profile.release]
debug = true
lto = true
